{
  "version": 4,
  "terraform_version": "1.3.5",
  "serial": 23,
  "lineage": "0c522ecf-788c-0158-4471-9c231a3b0d79",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07328174cbfa33c40",
            "association_id": "eipassoc-092966d130233e05c",
            "domain": "vpc",
            "id": "eipalloc-07328174cbfa33c40",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0bbf61bfd2bd62651",
            "private_dns": "ip-10-0-1-143.ap-south-1.compute.internal",
            "private_ip": "10.0.1.143",
            "public_dns": "ec2-3-108-208-194.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.108.208.194",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:569428056424:internet-gateway/igw-0c3536fb786e72a7d",
            "id": "igw-0c3536fb786e72a7d",
            "owner_id": "569428056424",
            "tags": {
              "env": "bastion-env",
              "name": "igw"
            },
            "tags_all": {
              "env": "bastion-env",
              "name": "igw"
            },
            "vpc_id": "vpc-01408116a752c3067"
          },
          "dependencies": [
            "aws_vpc.bastion-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07328174cbfa33c40",
            "connectivity_type": "public",
            "id": "nat-09dd86908758a9718",
            "network_interface_id": "eni-0bbf61bfd2bd62651",
            "private_ip": "10.0.1.143",
            "public_ip": "3.108.208.194",
            "subnet_id": "subnet-0791beea0f017bdc6"
          },
          "dependencies": [
            "aws_eip.example",
            "aws_subnet.public",
            "aws_vpc.bastion-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:569428056424:route-table/rtb-0a83759f2daa72057",
            "id": "rtb-0a83759f2daa72057",
            "owner_id": "569428056424",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09dd86908758a9718",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01408116a752c3067"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.example",
            "aws_nat_gateway.public-subnet",
            "aws_subnet.public",
            "aws_vpc.bastion-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:569428056424:route-table/rtb-0ac9694d1cbe0b465",
            "id": "rtb-0ac9694d1cbe0b465",
            "owner_id": "569428056424",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c3536fb786e72a7d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01408116a752c3067"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.bastion-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8b9a1f8419309ab",
            "route_table_id": "rtb-0a83759f2daa72057",
            "subnet_id": "subnet-0791beea0f017bdc6"
          },
          "dependencies": [
            "aws_eip.example",
            "aws_nat_gateway.public-subnet",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.bastion-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-ec2example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:569428056424:security-group/sg-02dfe22a00d8732b6",
            "description": "Example security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02dfe22a00d8732b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public-ec2-instance-sg",
            "name_prefix": "",
            "owner_id": "569428056424",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01408116a752c3067"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.bastion-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pvt-example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:569428056424:security-group/sg-00713fc1feb91e6f3",
            "description": "Example security group",
            "egress": [],
            "id": "sg-00713fc1feb91e6f3",
            "ingress": [],
            "name": "example",
            "name_prefix": "",
            "owner_id": "569428056424",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0085f14ff051349ca"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:569428056424:subnet/subnet-0382d7f704be53ad8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0382d7f704be53ad8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "569428056424",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-01408116a752c3067"
          },
          "dependencies": [
            "aws_vpc.bastion-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:569428056424:subnet/subnet-0791beea0f017bdc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0791beea0f017bdc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "569428056424",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-01408116a752c3067"
          },
          "dependencies": [
            "aws_vpc.bastion-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bastion-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:569428056424:vpc/vpc-01408116a752c3067",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07d7cb2246ed1a507",
            "default_route_table_id": "rtb-08382d544f744a8a5",
            "default_security_group_id": "sg-04211b5afe3960af7",
            "dhcp_options_id": "dopt-08796465ccf5e6dc2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01408116a752c3067",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08382d544f744a8a5",
            "owner_id": "569428056424",
            "tags": {
              "Name": "Bastion VPC"
            },
            "tags_all": {
              "Name": "Bastion VPC"
            }
          }
        }
      ]
    }
  ]
}